--- a/code/website/app/templates/location.html
+++ b/code/website/app/templates/location.html
@@ -3,22 +3,26 @@
 
 <head>
     <title>xyzNews</title>
-    <!--
-      <link rel="stylesheet" href="/static/css/main.css">
-    -->
-
+    <link rel="stylesheet" media="screen" href="{{ url_for('static', filename='bootstrap.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap-theme.min.css') }}">
 </head>
 
 <body>
+
+    <div class="container"><br>
+        <center>
+            <h1>xyzNews</h1>
+        </center>
+    </div>
+
     <div class="container">
-        <h1>
-            <center>xyzNews</center>
-        </h1>
 
-        {% block content %}
-        {{ prediction }}
-        {% endblock %}
+    </div>
 
+    <div class="container">
+        <p>
+            {{ prediction }}
+        </p>
     </div>
 </body>
 
