add predict api to server

--- a/code/website/app/templates/index.html
+++ b/code/website/app/templates/index.html
@@ -12,6 +12,7 @@
     <div class="container"><br>
         <center>
             <h1>xyzNews</h1>
+            <h3>Find Yourself</h3>
         </center>
     </div>
 
