--- a/code/website/app/templates/location.html
+++ b/code/website/app/templates/location.html
@@ -12,11 +12,12 @@
     <div class="container"><br>
         <center>
             <h1>xyzNews</h1>
+            <h3>Find Yourself</h3>
         </center>
     </div>
 
     <div class="container">
-
+        <h1>Results</h1>
     </div>
 
     <div class="container">
