--- a/code/website/app/templates/index.html
+++ b/code/website/app/templates/index.html
@@ -12,7 +12,7 @@
     <div class="container"><br>
         <center>
             <h1>xyzNews</h1>
-            <h3>Find Yourself</h3>
+            <h4>Find Yourself</h4>
         </center>
     </div>
 
@@ -22,8 +22,7 @@
                 {{ form.csrf }}
 
                 <div class="form-group">
-                    <label>Article Text</label>
-                    <textarea class="form-control" id="article" name="article" rows="20"></textarea>
+                    <textarea class="form-control" id="article" name="article" rows="20" placeholder="Paste the text from a news article here."></textarea>
                 </div>
 
                 <center>
@@ -32,6 +31,24 @@
             </form>
         </center>
     </div>
+
+    {% if prediction:  %}
+    <div class="container" id="results">
+        <center>
+            <h1>Results</h1>
+        </center>
+    </div>
+
+    <div class="container">
+        <center>
+            {% for source in prediction.keys(): %}
+            <p>
+                {{ source }}: {{ prediction.get(source) }}
+            </p>
+            {% endfor %}
+        </center>
+    </div>
+    {% endif %}
 </body>
 
 </html>
