update spacing on results

--- a/code/website/app/templates/index.html
+++ b/code/website/app/templates/index.html
@@ -5,6 +5,7 @@
     <title>xyzNews</title>
     <link rel="stylesheet" media="screen" href="{{ url_for('static', filename='bootstrap.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap-theme.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
 </head>
 
 <body>
@@ -12,7 +13,7 @@
     <div class="container"><br>
         <center>
             <h1>xyzNews</h1>
-            <h4>Find Yourself</h4>
+            <p>Find Yourself</p>
         </center>
     </div>
 
