--- a/code/website/app/templates/index.html
+++ b/code/website/app/templates/index.html
@@ -56,6 +56,7 @@
     {% if success:  %}
         <div class="container">
             <center>
+                <a name="results-sec"></a> 
                 <h2 id="results">Prediction Results</h2>
             </center>
         </div>
@@ -65,6 +66,7 @@
         </div>
     {% endif %}
 
+    <script> window.location.hash='results-sec';</script>
     <script>
         var chartColors = {
             red: 'rgb(255, 99, 132)',
